classDiagram
    class Form {
        <<Framework>>
        +Show()
        +Dispose()
    }

    class IAuthenticationService {
        <<interface>>
        +Authenticate(string username, string password) bool
        +ValidatePasswordComplexity(string password) bool
    }

    class AuthenticationService {
        +Authenticate(string username, string password) bool
        +ValidatePasswordComplexity(string password) bool
    }

    class MySqlAuthenticationService {
        -string connectionString
        +Authenticate(string username, string password) bool
        +ValidatePasswordComplexity(string password) bool
    }

    class Form1 {
        -IAuthenticationService _authService
        -TextBox txtUsername
        -TextBox txtPassword
        -TextBox txtConfirmPassword
        -Button btnLogin
        -Label lblUsername
        -Label lblPassword
        -Label lblConfirmPassword
        -Label lblTitle
        +Form1(IAuthenticationService authService)
        -InitializeComponent() void
        -btnLogin_Click(object sender, EventArgs e) void
    }

    class Program {
        <<static>>
        +Main()$ void
    }

    %% Relaciones y Herencia
    Form <|-- Form1 : Hereda de
    IAuthenticationService <|.. AuthenticationService : Implementa (Memoria)
    IAuthenticationService <|.. MySqlAuthenticationService : Implementa (MySQL Mock)
    Form1 o-- IAuthenticationService : Usa Agregación (SOLID - D)
    Program ..> MySqlAuthenticationService : Instancia actual
    Program ..> Form1 : Inyecta dependencia
